--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,29 +1,38 @@
+/*navbar styles*/
+
 .navbar {
-    background-color: #050831;
-  }
-  
-  .nav-item {
-    color: #ffffff;
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
+  background-color: #050831;
+}
 
-  .user-actions {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user-actions .nav-link {
-    padding: 0.5rem;
-    margin: 0.5rem;
-  }
-  
-  @media (max-width: 991px) {
-    .navbar-nav.ml-auto.order-lg-last {
-      flex-direction: row;
-    }
-  }
+.nav-item {
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
 
-  
+
+.user-actions {
+  display: flex;
+  align-items: center;
+}
+
+.user-actions .nav-link {
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
+
+#loggedOutItems {
+  display: inline-flex;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav.ml-auto.order-lg-last {
+    flex-direction: row;
+  }
+  #loggedOutItems, #loggedInItems {
+    flex-direction: column;
+  }
+}
+
+/*navbar styles*/
