--- a/css/inicio.css
+++ b/css/inicio.css
@@ -64,16 +64,17 @@
 }
 /*Estilos navbar*/
 
+
 /*cards styles*/
 
 .card {
-  border: 1px solid #ccc;
+  border: 1px solid #D5E6F7;
   background: linear-gradient(to top, #D5E6F7, #FFFFFF);
-  border-radius: 8px;
+  border-radius: 4px;
   padding: 16px;
   width: 300px;
-  height: 500px;
-  /* text-align: center; */
+  height: 400px;
+  text-align: center;
   /* font-family: ; */
 }
 
@@ -90,8 +91,30 @@
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1200px; /* Ajusta este valor según el ancho máximo que desees para el contenido */
+  justify-content: center;
+  gap: 16; /* Añade espacio entre las tarjetas */
   margin: auto; /* Centra el contenido horizontalmente */
+  max-width: 1300px; /* Ajusta este valor según el ancho máximo que desees para el contenido */
+}
+
+.card-title {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #050831; 
+}
+
+.card-subtitle{
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: #133072;
+}
+
+.card-text {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: medium;
+  color: #000000;
 }
 /*cards styles*/
