Corrigiendo errores de Vista, ya se ve bien los contenedores

--- a/public/Publicaciones/Principal/principal.css
+++ b/public/Publicaciones/Principal/principal.css
@@ -76,8 +76,7 @@ body {
 }
 
 /*Terminan estilos de formulario para crear publicaciones*/
-
-/*Estilos cards*/
+/* Estilos cards */
 #card-container {
   display: flex;
   flex-direction: column; /* Disposición vertical */
@@ -93,7 +92,7 @@ body {
   width: 100%; /* Ancho completo del contenedor */
   max-width: 700px; /* Ancho máximo de la tarjeta */
   height: auto; 
-  height: 450px;/* Altura automática para mantener la proporción */
+  height: 450px; /* Altura automática para mantener la proporción */
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
@@ -122,7 +121,10 @@ body {
 
 .card-title {
   font-size: 1rem;
-  margin: 0;
+  margin: 10px 0 0 0;
+  display: flex;
+  justify-content: space-between; /* Alinea el nombre del usuario a la izquierda y los botones a la derecha */
+  align-items: center; /* Alinea verticalmente el contenido */
 }
 
 .card-description {
@@ -133,11 +135,7 @@ body {
 
 .image-buttons {
   display: flex;
-  flex-wrap: wrap;
   gap: 10px; /* Espacio entre los botones */
-  position: absolute; /* Posiciona los botones en relación al contenedor padre */
-  top: 16px; /* Distancia desde el borde superior del contenido */
-  right: 16px; /* Distancia desde el borde derecho del contenido */
 }
 
 .image-button {
@@ -156,6 +154,8 @@ body {
   border-radius: 5px; /* Opcional: borde redondeado para los botones */
   transition: transform 0.3s;
 }
+
+
 
 .reaction-count {
   font-size: 12px; /* Tamaño del texto en pantallas más pequeñas */
