--- a/public/Perfil/perfil.css
+++ b/public/Perfil/perfil.css
@@ -202,3 +202,132 @@ cursor: pointer;
 color:#F90052;
 cursor: pointer;
 }
+/*-------------------------POSTS/GALERIA--------------------------*/
+#gallery-container {
+    width: 100%;
+    max-width: 700px; 
+    margin: 5vh auto 10vh; 
+    border-color: black;
+    padding: 0 15px; 
+    font-family: "Poppins", sans-serif;
+}
+
+#gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Grid responsivo */
+    gap: 10px;
+}
+
+.gallery-img-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%; 
+}
+
+.gallery-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+/*-------------------------MODAL DE IMAGENES--------------------------*/
+#modalContainer .modal-dialog {
+    max-width: 90%; 
+    width: auto;
+    margin: 1.75rem auto; /* centra el modal horizontalmente */
+}
+
+#modalContainer .modal-content {
+    max-height: 90vh; /* limita la altura del modal */
+    overflow-y: auto; /* Agrega un scroll si la imagen excede la medida anterior */
+}
+
+#modalContainer .modal-body {
+    text-align: center;
+    padding: 20px; 
+}
+
+#modalImage {
+    max-width: 100%;
+    max-height: 70vh;
+    object-fit: contain;
+}
+
+#btn-upload, #uploadButton {
+    background-color: #F90052 !important; 
+    border: none;
+}
+
+.modal-header {
+    border-bottom: none !important;
+    padding: 1rem; 
+}
+#modalDescription {
+    font-size: 1rem;
+}
+
+/*-------------------------MEDIA QUERIES--------------------------*/
+@media (max-width: 768px) {
+    #gallery-container {
+        margin-top: 10vh; 
+    }
+
+    #gallery {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
+    }
+
+    #modalContainer .modal-dialog {
+        margin: 0.5rem; 
+    }
+
+    #contenedor-general-perfil {
+        max-width: 100%;
+    }
+
+    #div-imagen-banner {
+        max-height: 250px;
+    }
+
+    #backgroundName {
+        margin-top: 180px;
+        margin-left: 20px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    #nombreArtista {
+        font-size: 30px;
+    }
+
+    #text-profesion-visible {
+        font-size: 24px;
+    }
+
+    #presentacion-del-artista {
+        height: auto;
+        padding-bottom: 20px;
+    }
+
+    #div-imagenPerfil {
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+        height: 200px;
+    }
+
+    #div-sobreMiTitulo,
+    #div-sobreMiTexto,
+    #div-ContactMe {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    #div-img-proyecto-reciente {
+        max-width: 100%;
+    }
+}
