--- a/public/Perfil/perfil.css
+++ b/public/Perfil/perfil.css
@@ -61,13 +61,12 @@
 /*-------------------------SOBRE MÍ--------------------------*/
 #presentacion-del-artista{/*div general "Sobre mí"*/
     background-color: #D5E6F7;
-    height: 350px;
+    min-height: 300px;
     max-width: 700px;
-    border: 2px black;
 }
 #div-imagenPerfil{
     position:relative;
-    margin-top: 55px;
+    margin-top: 35px;
     margin-left: 25px;
     width: 250px;
     height: 230px;
@@ -136,16 +135,16 @@
     cursor: pointer;
 }
 .btn-success{
-    background-color: #D5ADFB; 
-    border-color: #D5ADFB;
-    color: black;
+    background-color: #D5ADFB !important; 
+    border-color: #D5ADFB !important;
+    color: black !important;
     cursor: pointer;
-    font-family: Poppins, sans-serif;
+    font-family: Poppins, sans-serif !important;
 }
 .btn-success:hover{
-    background-color:#F90052;
-    border-color: #F90052;
-    color: white;
+    background-color:#F90052 !important;
+    border-color: #F90052 !important;
+    color: white !important;
 }
 /* Ocultar los iconos de edición */
 .botonEditar {
@@ -330,4 +329,37 @@ cursor: pointer;
     #div-img-proyecto-reciente {
         max-width: 100%;
     }
+
+    #div-imagenPerfil{
+        width: 250px;
+        height: 230px;
+    }
+    #nombreArtista{
+        margin-top: -20px;
+    }
+    #text-profesion-visible{
+        margin-top: -30px;
+    }
 }
+
+@media (max-width: 575px){
+
+#div-img-proyecto-reciente{
+    position: relative; 
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+#imagen-proyecto-reciente {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+}
+@media (max-width: 487px){
+#nombreArtista{
+    margin-top: -35px;
+}
+#text-profesion-visible{
+    display: none;
+}}
