--- a/public/Eventos/css/formulariobase.css
+++ b/public/Eventos/css/formulariobase.css
@@ -56,7 +56,7 @@
             border-radius: 10px;
         }
 
-        .btn-cancelar {
+        #btn-cancelar {
           margin-top: 15px;
           background-color:darkgray;
           border-color: darkgray;
