--- a/public/Publicaciones/PantallaPublicacion/publicacion.css
+++ b/public/Publicaciones/PantallaPublicacion/publicacion.css
@@ -100,7 +100,7 @@ Folly: #F90052
   box-sizing: border-box;
 }
 
-.publication-description {
+#content {
   /* background-color: rgba(255, 255, 255);
   border: 1px solid #ccc; */ /*fondo blanco para la descripción*/
   /* margin-top: 1vh; */
@@ -109,11 +109,11 @@ Folly: #F90052
   color: #333;
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
   box-sizing: border-box;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  text-align: justify;
 }
 .edit-description-textarea {
   width: 100%; /* Ajusta el ancho al contenedor padre */
@@ -121,11 +121,19 @@ Folly: #F90052
   resize: both; /* Permite redimensionar el textarea tanto en ancho como en alto */
 }
 
-.publication-description p {
+.card-description p {
   margin: 0 0 10px 0;
 }
 
 .publication-image {
+  width: 100%;
+  max-height: 500px;
+  object-fit: contain;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.publication-image img {
   width: 100%;
   max-height: 500px;
   object-fit: contain;
@@ -139,7 +147,21 @@ Folly: #F90052
   justify-content: space-between;
   align-items: center;
   background-color: #D5E6F7;
-  padding: 16px;
+  padding-top: 5px;
+  padding-right: 16px;
+  padding-left: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+}
+
+#content {
+  display: flex;
+  justify-content: space-between;
+  align-items: justify;
+  background-color: #D5E6F7;
+  padding-left: 16px;
+  padding-right: 16px;
   width: 100%;
   box-sizing: border-box;
   flex-wrap: wrap;
@@ -306,7 +328,7 @@ Folly: #F90052
     padding: 8px;
   }
 
-  .publication-description {
+  .card-description {
     padding: 12px;
   }
 
