--- a/public/Perfil/perfil.css
+++ b/public/Perfil/perfil.css
@@ -43,6 +43,10 @@
     margin-bottom: -87px;
     max-height: 50px;
 }
+#save-button-profesion{
+    z-index: 4;
+    position: absolute;
+}
 #nombreArtista{
     z-index: 3;
     color: white;
@@ -282,23 +286,18 @@ cursor: pointer;
     #gallery-container {
         margin-top: 10vh; 
     }
-
     #gallery {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
     }
-
     #modalContainer .modal-dialog {
         margin: 0.5rem; 
     }
-
     #contenedor-general-perfil {
         max-width: 100%;
     }
-
     #div-imagen-banner {
         max-height: 250px;
     }
-
     #backgroundName {
         margin-top: 180px;
         margin-left: 20px;
@@ -348,6 +347,18 @@ cursor: pointer;
     #text-profesion-visible{
         margin-top: -30px;
     }
+    #text-profesion-visible{
+        margin-top: -20px;
+    }
+    #boton-editar-profesion {
+        top: 150px;
+        left: 5px;
+}
+#backgroundName{
+    margin-top: 150px;
+    margin-left: 50px;
+    text-align: center;
+}
 }
 
 @media (max-width: 575px){
@@ -363,11 +374,45 @@ cursor: pointer;
     height: 100%;
     object-fit: cover;
 }
+#nombreArtista{
+    margin-top: -25px;
 }
+#text-profesion-visible{
+margin-top: -10px;
+}
+#backgroundName{
+margin-top: 160px;
+margin-left: 50px;
+text-align: center;
+}
+#boton-editar-profesion {
+left: 3px;
+}}
 @media (max-width: 487px){
 #nombreArtista{
-    margin-top: -35px;
+    margin-top: -25px;
 }
 #text-profesion-visible{
     display: none;
+}
+#boton-editar-profesion {
+    top: 100px;
+    left: 5px;
+}
+
+#text-profesion-visible{
+    margin-top: -25px;
+    display: none;
+}
+#backgroundName{
+    margin-top: 120px;
+    margin-left: 50px;
+    text-align: center;
 }}
+@media (max-width: 410px){
+    #backgroundName{
+        margin-top: 100px;
+        margin-left: 50px;
+        text-align: center;
+    }
+}
