se muestra el nombre guardado en local storage en publicaciones y comentarios

--- a/public/Perfil/perfil.css
+++ b/public/Perfil/perfil.css
@@ -126,6 +126,9 @@
     height: 100%;
     object-fit: cover; 
 }
+#text-proyectoReciente-visible{
+font-family: Poppins, sans-serif;
+}
 /*-------------------------ICONOS/BOTONES--------------------------*/
 /*botón de editar con ícono*/
 .fi{
